<resources>
    <string name="app_name">Juicy Wi-Fi Manager</string>
    <string name="title_activity_maps">Map</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="marker_item_comments_count">Comments:</string>
    <string name="settings_header_profile">Profile</string>
    <string name="settings_action_logout">Log out</string>
    <string name="settings_summary_logout_account">Account:</string>
    <string name="settings_action_clear_cache">Clear cache</string>
    <string name="settings_summary_clear_cache">Deletes saved markers</string>
    <string name="settings_header_general">General</string>
    <string name="settings_action_change_language">Language</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_add_marker">Add marker</string>
    <string name="menu_search">Search...</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_top">Global tops</string>
    <string name="menu_favourites">Favourites</string>
    <string name="menu_public_markers">Public markers</string>
    <string name="menu_private_marker">Private markers</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Contact us</string>
    <string name="marker_card_back">Back</string>
    <string name="marker_card_show_marker">Show marker</string>
</resources>